--- a/src/components/LeftPanel/panel.css
+++ b/src/components/LeftPanel/panel.css
@@ -1,5 +1,5 @@
 .panel {
-    width: 70px;
+    width: 110px;
     height: 100%;
     background-color: #fff;
     position: fixed;
@@ -29,14 +29,15 @@
 
 .button,
 .button1 {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     margin-bottom: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     border: 0;
+    border-radius: 6px;
 }
 
 .button1 {
@@ -47,4 +48,14 @@
 .button1 img {
     max-width: 100%;
     max-height: 100%;
+}
+.button1 img {
+    border-radius: 50%;
+}
+
+@media (max-width: 480px) {
+    .panel {
+        width: 70px;
+        background-color: #ccc;
+    }
 }
